--- a/projet-front-richard-yanis/package.json
+++ b/projet-front-richard-yanis/package.json
@@ -19,6 +19,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "sass": "^1.81.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
