--- a/package.json
+++ b/package.json
@@ -1,60 +1,27 @@
 {
-  "name": "projet-front-richard-yanis",
-  "version": "0.0.0",
+  "name": "nuxt-app",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "test:unit": "cypress run --component",
-    "test:unit:dev": "cypress open --component",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "sass": "^1.81.0",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "@nuxt/eslint": "^0.7.2",
+    "eslint": "^9.16.0",
+    "nuxt": "^3.14.1592",
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/addon-essentials": "^8.4.5",
-    "@storybook/addon-interactions": "^8.4.5",
-    "@storybook/addon-onboarding": "^8.4.5",
-    "@storybook/blocks": "^8.4.5",
-    "@storybook/test": "^8.4.5",
-    "@storybook/vue3": "^8.4.5",
-    "@storybook/vue3-vite": "^8.4.5",
-    "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.9.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
-    "@vue/tsconfig": "^0.5.1",
-    "cypress": "^13.15.1",
-    "eslint": "^9.14.0",
-    "eslint-plugin-cypress": "^4.1.0",
-    "eslint-plugin-storybook": "^0.11.1",
-    "eslint-plugin-vue": "^9.30.0",
-    "npm-run-all2": "^7.0.1",
-    "prettier": "^3.3.3",
-    "start-server-and-test": "^2.0.8",
-    "storybook": "^8.4.5",
-    "typescript": "~5.6.3",
-    "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4",
+    "typescript": "5.6.3",
     "vue-tsc": "^2.1.10"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
